--- a/index.html
+++ b/index.html
@@ -19,9 +19,77 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="text-primary">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, rem!
-    </h1>
+    <header class="banner">
+      <nav
+        class="navbar navbar-expand-lg bg-white box-shadow position-fixed top-0 start-0 w-100 px-lg-5 px-2"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <h2 class="mb-0">
+              <i class="fa-solid fa-bars-staggered me-2 text-info"></i
+              ><span class="text-primary">FlexStart</span>
+            </h2></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold px-2" href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold px-2" href="#"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold px-2" href="#"
+                  >Services
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold px-2" href="#"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold px-2" href="#"
+                  >Team</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold px-2" href="#"
+                  >Blog</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-primary fs-5 fw-semibold px-2 text-nowrap"
+                  href="#"
+                  >Drop Down</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary fs-5 fw-semibold ps-2" href="#"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <!-- Bootstrap Js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
