--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <body>
     <header class="banner">
       <nav
-        class="navbar navbar-expand-lg bg-white box-shadow position-fixed top-0 start-0 w-100 px-lg-5 px-2"
+        class="navbar navbar-expand-lg bg-white box-shadow position-fixed top-0 start-0 w-100"
       >
-        <div class="container-fluid">
+        <div class="container-lg">
           <a class="navbar-brand" href="#">
             <h2 class="mb-0">
               <i class="fa-solid fa-bars-staggered me-2 text-info"></i
@@ -31,7 +31,7 @@
             </h2></a
           >
           <button
-            class="navbar-toggler"
+            class="navbar-toggler shadow-none border-0"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -39,7 +39,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <i class="fa-solid fa-bars text-info fs-3"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
@@ -89,6 +89,22 @@
           </div>
         </div>
       </nav>
+      <div>
+        <div class="container-md header-content mt-5">
+          <div class="row mt-5 ">
+            <div class="col-lg-7">
+              <h1 class="display-4 fw-semibold text-primary">We offer modern solutions for growing your business</h1>
+              <p class="fs-3 text-grey">
+                We are team of talented designers making websites with Bootstrap
+              </p>
+              <button class="my-btn-1 d-flex align-items-center">Get Started <i class="fa-solid fa-arrow-right-long ms-2"></i></button>
+            </div>
+            <div class="col-lg-5 mt-5 mt-lg-0">
+              <img src="./images/banner/banner-1.png" class="img-fluid" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- Bootstrap Js  -->
